<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist_Maker</string>
    <string name="title">Playlist maker</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="searching">Поиск</string>
    <string name="share">Поделится приложением</string>
    <string name="source_send">Написать в поддержку</string>
    <string name="user_policy">Пользовательское соглашение</string>
    <string name="dark">Темная тема</string>
    <string name="search_disp">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="user_polic_web">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email">drroon6799@gmail.com</string>
    <string name="share_ht">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="no_track">Трэк не найден</string>
    <string name="went_wrong">Что-то пошло не так</string>
    <string name="restore">Обновить</string>
    <string name="wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="nothing">Ничего не нашлось</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_search">Вы искали</string>
    <string name="country_music">Страна</string>
    <string name="type_music">Жанр</string>
    <string name="year_music">Год</string>
    <string name="group_music">Альбом</string>
    <string name="time_music">Длительность</string>
    <string name="time_music_0_30">0:30</string>
    <string name="like_music">Избранные треки</string>
    <string name="play_list_music">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="no_mediateka">Ваша медиатека пуста</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_playlist">Создать</string>
    <string name="about_playlist">Описание</string>
    <string name="name_playlist">Название*</string>
    <string name="add_playlist">Добавить в плейлист</string>
    <string name="add_playlist_yes">Добавлено в плейлист %1$s</string>
    <string name="add_playlist_no">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_create">Плейлист %1$s создан</string>
    <string name="share_menu">Поделится</string>
    <string name="edit_playlist_button">Редактировать информацию</string>
    <string name="delete_playlist_button">Удалить плейлист</string>
    <string name="not_tracks_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="tracks_share_intent">Привет, посмотри на мой плэйлист с названием «%1$s».\nОписание: «%2$s».\nВ нем «%3$s трека».\nСписок треков:\n</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save_fragment_playlist">Сохранить</string>
    <string name="no_track_in_playlist_message">Вы не добавили ни один трек \nв этот плейлист</string>
</resources>