<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackOrWhite"
    android:orientation="vertical"
    tools:context=".settings.presentation.fragment.SettingsFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        style="@style/LinearSettings"
        android:layout_marginStart="@dimen/o_4dp">

        <TextView
            style="@style/TopText"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        style="@style/LinearSettings"
        android:layout_marginTop="@dimen/o_24dp">

        <TextView
            style="@style/ButtonSettings"
            android:text="@string/dark" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/sDayOrNight"
            style="@style/Checker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/o_8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llShareApp"
        style="@style/LinearSettings"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/ButtonSettings"
            android:text="@string/share"
            tools:ignore="InefficientWeight,NestedWeights" />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/share_ic"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSendSupport"
        style="@style/LinearSettings"
        tools:ignore="UseCompoundDrawables">


        <TextView
            style="@style/ButtonSettings"
            android:text="@string/source_send"
            tools:ignore="InefficientWeight,NestedWeights" />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/source_ic"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llUserPolicy"
        style="@style/LinearSettings"
        tools:ignore="UseCompoundDrawables">


        <TextView
            style="@style/ButtonSettings"
            android:text="@string/user_policy"
            tools:ignore="Nestea" />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/back1_ic"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</LinearLayout>