<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackOrWhite"
    android:orientation="vertical"
    tools:context=".search.presentation.fragment.SearchFragment"
    tools:ignore="MissingDefaultResource">

    <LinearLayout style="@style/LinearSettings">

        <TextView
            style="@style/TopText"
            android:text="@string/search_disp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/o_16dp"
            android:layout_marginTop="@dimen/o_8dp"
            android:layout_marginEnd="@dimen/o_16dp"
            android:layout_marginBottom="@dimen/o_8dp"
            android:background="@drawable/edit_form"
            android:drawableStart="@drawable/search_icon16"
            android:drawablePadding="@dimen/o_8dp"
            android:drawableTint="@color/greyOrBlack"
            android:hint="@string/search_disp"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="20"
            android:paddingHorizontal="@dimen/o_16dp"
            android:paddingVertical="@dimen/o_12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/greyOrBlack"
            android:textCursorDrawable="@drawable/text_cursor"
            android:textSize="@dimen/_16sp" />

        <ImageView
            android:id="@+id/ivClearIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/o_28dp"
            android:src="@drawable/clear_track_ic"
            android:visibility="gone" />

    </FrameLayout>

    <TextView
        android:id="@+id/tvHistorySearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/o_44dp"
        android:layout_marginBottom="@dimen/o_20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center_horizontal"
        android:text="@string/your_search"
        android:textColor="@color/BlWh"
        android:textSize="@dimen/o_19sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/progres_bar"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rwTrack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/o_0dp"
            android:layout_marginTop="@dimen/o_16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/track_item" />

        <Button
            android:id="@+id/bClearHistorySearch"
            style="@style/ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_24dp"
            android:layout_marginBottom="@dimen/o_4dp"
            android:backgroundTint="@color/BlWh"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/clear_history"
            android:textAllCaps="false"
            android:textSize="@dimen/o_14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHolderNothingOrWrong"
        android:layout_width="match_parent"
        android:layout_height="@dimen/o_0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_104dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/com2_ic"
                app:tint="@color/BlWh" />

            <ImageView
                android:id="@+id/ivSunOrWiFi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/o_28dp"
                android:layout_marginTop="@dimen/o_26dp"
                android:src="@drawable/sun_ic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/o_72dp"
                android:src="@drawable/com1_ic"
                app:tint="@color/BlWh" />

        </FrameLayout>

        <TextView
            android:id="@+id/tvTextHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="@dimen/o_16dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/nothing"
            android:textColor="@color/BlWh"
            android:textSize="@dimen/o_19sp" />

        <Button
            android:id="@+id/btResearch"
            style="@style/ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/o_24dp"
            android:backgroundTint="@color/BlWh"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/restore"
            android:textAllCaps="false"
            android:textSize="@dimen/o_14sp"
            app:tint="@color/BlWh" />

    </LinearLayout>

</LinearLayout>